add(total-num-pixels): Added discussion on total number of pixels

--- a/imagpro-mp1-hernandez.ipynb
+++ b/imagpro-mp1-hernandez.ipynb
@@ -419,6 +419,112 @@
    "source": [
     "## 2. Image Statistics"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we'll focus on the image statistics of the first image only, the `data1.jpg`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Total number of pixels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get the total number of **RGB pixels** by calling the `size` attribute of the first image. \n",
+    "Then for the **Grayscale pixels**, we can use the `shape` attribute of the first image to retrieve\n",
+    "the total number of pixels per row and column, and multiply them to each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total RGB pixels: 3072\n",
+      "Total Grayscale pixels: 1024\n"
+     ]
+    }
+   ],
+   "source": [
+    "rgb_pixels_num_first_img = imgs_32x32[0].size\n",
+    "h, w = imgs_32x32[0].shape[:2]\n",
+    "gray_pixels_num_first_img = h * w\n",
+    "print(f'Total RGB pixels: {rgb_pixels_num_first_img}')\n",
+    "print(f'Total Grayscale pixels: {gray_pixels_num_first_img}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By looking at the results above, the total number of **RGB pixels** is `3072` while the total number\n",
+    "of **Grayscale pixels** is `1024`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### All images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll compute for the total number of pixels in the image dataset. \n",
+    "We can also apply the same techniques that was already done before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total RGB pixels: 18432\n",
+      "Total Grayscale pixels: 6144\n"
+     ]
+    }
+   ],
+   "source": [
+    "rgb_pixels_num_all_imgs = t_imgs_32x32.size\n",
+    "i_n, h_n, w_n = t_imgs_32x32.shape[:3]\n",
+    "gray_pixels_num_all_imgs = i_n * h_n * w_n\n",
+    "print(f'Total RGB pixels: {rgb_pixels_num_all_imgs}')\n",
+    "print(f'Total Grayscale pixels: {gray_pixels_num_all_imgs}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is observed that the total number of **RGB pixels** for the image dataset is `18432`\n",
+    "while the **Grayscale pixels** was observed to have a total of `6144` for the image dataset,\n",
+    "as seen above. "
+   ]
   }
  ],
  "metadata": {
