--- a/imagpro-mp1-hernandez.ipynb
+++ b/imagpro-mp1-hernandez.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "(6, 32, 32, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -883,12 +883,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, we'll determine how many pixels that has an intensity equal or below 0.5."
+    "Lastly, we'll determine how many pixels that has an intensity equal or below `0.5`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -896,11 +896,11 @@
      "output_type": "stream",
      "text": [
       "Number of pixels that has an intensity equal or below 0.5:\n",
-      "\tOriginal (Red channel):\t 920.0\n",
-      "\tOriginal (Green channel):\t 369.0\n",
-      "\tOriginal (Blue channel):\t 958.0\n",
-      "\tGrayscale: 667.0\n",
-      "\tAverage per pixel: 879.0\n"
+      "\tOriginal (Red channel):   920.0\n",
+      "\tOriginal (Green channel): 369.0\n",
+      "\tOriginal (Blue channel):  958.0\n",
+      "\tGrayscale:                667.0\n",
+      "\tAverage per pixel:        879.0\n"
      ]
     }
    ],
@@ -927,11 +927,42 @@
     "\n",
     "# display results\n",
     "print(\"Number of pixels that has an intensity equal or below 0.5:\")\n",
-    "print(\"\\tOriginal (Red channel):\\t\", r_low_intensity_pixel_count)\n",
-    "print(\"\\tOriginal (Green channel):\\t\", g_low_intensity_pixel_count)\n",
-    "print(\"\\tOriginal (Blue channel):\\t\", b_low_intensity_pixel_count)\n",
-    "print(\"\\tGrayscale:\", gray_low_intensity_pixel_count)\n",
-    "print(\"\\tAverage per pixel:\", avg_low_intensity_pixel_count)"
+    "print(\"\\tOriginal (Red channel):  \", r_low_intensity_pixel_count)\n",
+    "print(\"\\tOriginal (Green channel):\", g_low_intensity_pixel_count)\n",
+    "print(\"\\tOriginal (Blue channel): \", b_low_intensity_pixel_count)\n",
+    "print(\"\\tGrayscale:               \", gray_low_intensity_pixel_count)\n",
+    "print(\"\\tAverage per pixel:       \", avg_low_intensity_pixel_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Analysis / Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the resulting histogram plots and pixel counts in the previous cells, we can easily analyze the \n",
+    "intensity of the images on its original RGB color system, Grayscale color system, and its average per\n",
+    "pixel version.\n",
+    "\n",
+    "We'll start first with the number of pixels that has an intensity value equal to or below `0.5`. It is\n",
+    "important to reiterate that the total number of pixels per channel (for the case of RGB image) or pixel\n",
+    "as a whole (for the case of the Grayscale and average per pixel image) is `1024`.\n",
+    "\n",
+    "Intensity observation using the number of pixels that has an intensity value equal to or below `0.5`:\n",
+    "- The majority of the pixels in the red channel (`Original (Red channel)`) and \n",
+    "blue channel (`Original (Blue channel)`) of the original image has a low intensity (i.e. darker).\n",
+    "- The majority of the pixels in the red channel (`Original (Red channel)`) and \n",
+    "blue channel (`Original (Blue channel)`) of the original image has a high intensity (i.e. lighter/brighter)\n",
+    "due to the fact that only a few of its pixels has an intensity equal to or below `0.5`.\n",
+    "- The pixel count for the Grayscale (`Grayscale`) and average per pixel (`Average per pixel`) image can be \n",
+    "used as an evidence to the observation earlier (in section `2.2 Averaging Pixels`) that the `Average per pixel`\n",
+    "is darker compared to the `Grayscale` since the number of pixels that are equal to or below `0.5` is `667`\n",
+    "and `879`, respectively. The `Average per pixel` image has more low intensity pixels compared to `Grayscale` image."
    ]
   }
  ],
